fixed bug that appeared after r57 when version text was too long. (The rightpane was pushed downside)

--- a/html/css/dmmaps.css
+++ b/html/css/dmmaps.css
@@ -178,6 +178,10 @@ span.dmzone {
 #cellinfoctn {
     text-align:right;
 }
+div#versions {
+    width:576px;
+    overflow:auto;
+}
 
 /*
 .handler {
